--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Firebase y autenticación necesitan acceso a Internet -->
+    <!-- Permisos -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Para evitar el warning de CAMERA sin declarar el hardware -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +23,7 @@
         android:theme="@style/Theme.InnovationProjectGT0105"
         tools:targetApi="31">
 
-        <!-- Punto de entrada -->
+        <!-- Punto de entrada de la app -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -28,24 +35,22 @@
             </intent-filter>
         </activity>
 
-        <!-- Pantalla de Login -->
+        <!-- Login -->
         <activity
             android:name=".auth.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.InnovationProjectGT0105" />
 
-        <!-- Pantalla de Signup -->
+        <!-- Registro -->
         <activity
             android:name=".auth.RegisterActivity"
             android:exported="true"
             android:theme="@style/Theme.InnovationProjectGT0105" />
 
-        <!-- Pantalla principal post-login -->
+        <!-- Pantalla Principal -->
         <activity
             android:name=".ui.screens.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.InnovationProjectGT0105" />
-
     </application>
-
 </manifest>
