feat: integrate edit event functionality and UI enhancements
- Added EditEventActivity with full edit and result handling
- Updated HomeActivity to launch edit screen using ActivityResultLauncher
- Fixed UI padding and background color consistency
- Ensured backward compatibility with getParcelableExtra for API < 33
- Updated EventEntity to support Parcelable operations
- Minor adjustments in theme and manifest to align with new screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,5 +52,12 @@
             android:name=".ui.screens.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.InnovationProjectGT0105" />
+
+        <!-- Edición de eventos -->
+        <activity
+            android:name=".ui.screens.EditEventActivity"
+            android:exported="false"
+            android:theme="@style/Theme.InnovationProjectGT0105" />
+
     </application>
 </manifest>
