feat: add EventDetailsActivity and integrate navigation from HomeActivity
- Added EventDetailsActivity to display full event information
- Integrated view navigation from HomeActivity using intent extras
- Registered the new activity in AndroidManifest.xml
- Ensured dark theme consistency and back button behavior

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,5 +59,11 @@
             android:exported="false"
             android:theme="@style/Theme.InnovationProjectGT0105" />
 
+        <!-- Detalle de eventos -->
+        <activity
+            android:name=".ui.screens.EventDetailsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.InnovationProjectGT0105" />
+
     </application>
 </manifest>
