feat(events): implement Google Maps integration and improve event persistence
- Added full support for opening event locations in Google Maps with fallback to browser
- Persist selected image in internal storage and display it in event details
- Improved EventDetailsActivity with robust URI handling and layout polish
- Added <queries> block in AndroidManifest.xml to comply with package visibility requirements
- Ensured EventViewModel, EventRepository, EventDao and HomeActivity properly handle user-specific event loading
- Verified full event lifecycle: add, update, delete, view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Declaración para permitir consultar si Google Maps está instalado -->
+    <queries>
+        <package android:name="com.google.android.apps.maps" />
+    </queries>
+
     <!-- Permisos -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
